...
    Box(
        modifier =
            Modifier.width((size.value * 1.5f).dp)
                .background(Black.copy(alpha = 0.6f), RoundedCornerShape(8.dp))
                .padding(8.dp)) {
          AnimatedText(
              modifier = Modifier.testTag("animatedText"),
              text = text,
              style = MaterialTheme.typography.bodyMedium.copy(color = White))
        }
    Spacer(modifier = Modifier.height(8.dp))

    Image(
...
        contentDescription = "Coach",
        modifier =
            Modifier.size(size)
                .clip(CircleShape)
                .shadow(8.dp, CircleShape)
                .background(BlueGradient, CircleShape)
                .testTag("coachImage"))
  }
}

